--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "gatsby": "^5.14.1",
     "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-mdx": "^5.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-remark-images": "^7.14.0",
