--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-remark-prismjs": "^7.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.485.0",
     "prismjs": "^1.30.0",
     "react": "^18.2.0",
